[tool.poetry]
name = "htclib"
version = "0.0.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.7.3"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
prospector = {version = "^1.3.1", extras = ["all"]}
mypy = "^0.800"
reorder-python-imports = "^2.3.6"
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
